--- a/src/test/resources/html-dump.html
+++ b/src/test/resources/html-dump.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-<title>Rules for jxlint - 1.0.1</title>
+<title>Rules for jxlint - $$$VERSION$$$</title>
 </head>
 <body>
 <table>
