--- a/index.html
+++ b/index.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Jxlint : Framework for doing static analysis in Java">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Jxlint</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/selesse/jxlint">View on GitHub</a>
-
-          <h1 id="project_title">Jxlint</h1>
-          <h2 id="project_tagline">Framework for doing static analysis in Java</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/selesse/jxlint/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/selesse/jxlint/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+---
+layout: default
+---
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
@@ -225,26 +199,3 @@ possible.</p>
 <p>This software is licensed under the <a href="http://en.wikipedia.org/wiki/MIT_License">MIT License</a>.</p>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Jxlint maintained by <a href="https://github.com/selesse">selesse</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-21202178-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-
-  </body>
-</html>
