--- a/sample-report/index.html
+++ b/sample-report/index.html
@@ -107,7 +107,7 @@ $(document).ready(function() {
 <div class="container">
     <div class="well">
         <h2> jxlint-impl 0.1.0 - Lint Report </h2>
-        <h3> Mon Jun 26 22:22:17 EDT 2017 </h3>
+        <h3> Tue Jun 27 15:21:27 EDT 2017 </h3>
         <h4> jxlint-impl </h4>
     </div>
 
@@ -160,7 +160,7 @@ $(document).ready(function() {
                         <div class="panel-heading">
                             <h4>
                                 <span class="label label-danger">ERROR</span>
-                                                                <a href="#functionsstartingwithtestaretests">Functions starting with 'test' are tests</a> violated in <a href="/Users/alex/git/jxlint2/jxlint-impl/src/test/resources/sample-test/SomeJuicyTest.java">src/test/resources/sample-test/SomeJuicyTest.java</a>
+                                                                <a href="#functionsstartingwithtestaretests">Functions starting with 'test' are tests</a> violated in <a href="https://github.com/selesse/jxlint/blob/master/jxlint-impl/src/test/resources/sample-test/SomeJuicyTest.java">src/test/resources/sample-test/SomeJuicyTest.java</a>
                                                                     on line 8
                                                             </h4>
                         </div>
@@ -172,7 +172,7 @@ $(document).ready(function() {
                         <div class="panel-heading">
                             <h4>
                                 <span class="label label-danger">ERROR</span>
-                                                                <a href="#functionsstartingwithtestaretests">Functions starting with 'test' are tests</a> violated in <a href="/Users/alex/git/jxlint2/jxlint-impl/src/test/resources/sample-test/SomeJuicyTest.java">src/test/resources/sample-test/SomeJuicyTest.java</a>
+                                                                <a href="#functionsstartingwithtestaretests">Functions starting with 'test' are tests</a> violated in <a href="https://github.com/selesse/jxlint/blob/master/jxlint-impl/src/test/resources/sample-test/SomeJuicyTest.java">src/test/resources/sample-test/SomeJuicyTest.java</a>
                                                                     on line 13
                                                             </h4>
                         </div>
@@ -184,7 +184,7 @@ $(document).ready(function() {
                         <div class="panel-heading">
                             <h4>
                                 <span class="label label-warning">WARNING</span>
-                                                                <a href="#slf4jloggersshouldnotusestringformat">SLF4J loggers should not use String.format</a> violated in <a href="/Users/alex/git/jxlint2/jxlint-impl/src/test/resources/sample-test/SomeJuicyTest.java">src/test/resources/sample-test/SomeJuicyTest.java</a>
+                                                                <a href="#slf4jloggersshouldnotusestringformat">SLF4J loggers should not use String.format</a> violated in <a href="https://github.com/selesse/jxlint/blob/master/jxlint-impl/src/test/resources/sample-test/SomeJuicyTest.java">src/test/resources/sample-test/SomeJuicyTest.java</a>
                                                                     on line 10
                                                             </h4>
                         </div>
